--- a/foundations/03-grouping-selectors/index.html
+++ b/foundations/03-grouping-selectors/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
-    <button id="elem1" class="shared-properties">Click Me!</button>
-    <button id="elem2" class="shared-properties">No, Click Me!</button>
+    <button id="bckgrd-text" class="shared-properties">Click Me!</button>
+    <button id="bckgrd" class="shared-properties">No, Click Me!</button>
   </body>
 </html>
